--- a/onoff/pom.xml
+++ b/onoff/pom.xml
@@ -23,6 +23,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220924</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.jcraft</groupId>
       <artifactId>jsch</artifactId>
       <version>0.1.55</version>
