--- a/onoff/pom.xml
+++ b/onoff/pom.xml
@@ -23,9 +23,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20220924</version>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
     </dependency>
 
     <dependency>
