--- a/known_hosts/known_hosts.json
+++ b/known_hosts/known_hosts.json
@@ -16,9 +16,9 @@
         },
         {
             "device": {
-                "ip": "127.0.0.1",
-                "name": "local",
-                "mac": "11:22:33:44:55:66"
+                "ip": " 192.168.1.158",
+                "name": "DESKTOP-FL1M5A0",
+                "mac": "A4:2B:B0:27:73:14"
             }
         }
     ]
